--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,10 @@ after_success:
   # Log in to the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Take those images and push them to docker hub
+
+  #These variables were configured on Travis Website too
   - docker push mjmendez17/multi-client
   - docker push mjmendez17/multi-nginx
   - docker push mjmendez17/multi-server
   - docker push mjmendez17/multi-worker
+# ready to deploy
