--- a/.travis.yml
+++ b/.travis.yml
@@ -25,3 +25,17 @@ after_success:
   - docker push mjmendez17/multi-server
   - docker push mjmendez17/multi-worker
 # ready to deploy
+
+
+#AS TRAVIS WILL BE INTERACTING WITH AWS, WE HAVE TO PUT SOME CONFIGURATION PARAMETERS:
+deploy:
+  provider: elasticbeanstalk
+  region: 'us-east-1'
+  app: 'multi-docker'
+  env: 'MultiDocker-env'
+  bucket_name: 'elasticbeanstalk-us-east-1-450189179229'
+  bucket_path: 'docker-multi'
+  on:
+    branch: main
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
